--- a/configs/Arthur&Athena&Taiyi.config
+++ b/configs/Arthur&Athena&Taiyi.config
@@ -12,6 +12,8 @@ CONFIG_NSS_FIRMWARE_VERSION_12_5=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-openlist2=y
+CONFIG_PACKAGE_luci-app-lucky=m
+CONFIG_PACKAGE_luci-app-gecoosac=m
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-app-dockerman=m
