--- a/configs/x86-64.config
+++ b/configs/x86-64.config
@@ -15,3 +15,6 @@ CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-filebrowser-go=y
+CONFIG_PACKAGE_luci-app-snmpd=y
+CONFIG_PACKAGE_luci-i18n-snmpd-zh-cn=y
+CONFIG_PACKAGE_snmpd-nossl=y
