--- a/configs/Arthur&Athena&Taiyi.config
+++ b/configs/Arthur&Athena&Taiyi.config
@@ -16,4 +16,5 @@ CONFIG_PACKAGE_luci-app-gecoosac=m
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-app-dockerman=m
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=m
 CONFIG_PACKAGE_luci-app-filebrowser-go=m
