--- a/configs/x86-64.config
+++ b/configs/x86-64.config
@@ -14,6 +14,7 @@ CONFIG_PACKAGE_luci-app-openlist2=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 CONFIG_PACKAGE_luci-app-filebrowser-go=y
 CONFIG_PACKAGE_luci-app-snmpd=y
 CONFIG_PACKAGE_luci-i18n-snmpd-zh-cn=y
