--- a/configs/x86-64.config
+++ b/configs/x86-64.config
@@ -19,3 +19,4 @@ CONFIG_PACKAGE_luci-app-filebrowser-go=y
 CONFIG_PACKAGE_luci-app-snmpd=y
 CONFIG_PACKAGE_luci-i18n-snmpd-zh-cn=y
 CONFIG_PACKAGE_snmpd-nossl=y
+CONFIG_PACKAGE_libnetsnmp-nossl=y
