--- a/configs/Arthur&Athena&Taiyi.config
+++ b/configs/Arthur&Athena&Taiyi.config
@@ -18,3 +18,4 @@ CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-app-dockerman=m
 CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=m
 CONFIG_PACKAGE_luci-app-filebrowser-go=m
+CONFIG_PACKAGE_hysteria=m
