--- a/configs/Arthur&Athena&Taiyi.config
+++ b/configs/Arthur&Athena&Taiyi.config
@@ -5,14 +5,13 @@ CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01=y
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02=y
 CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02="luci-app-athena-led luci-i18n-athena-led-zh-cn"
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="luci-app-gecoosac luci-app-dockerman luci-i18n-dockerman-zh-cn luci-app-filebrowser-go hysteria"
+CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="luci-app-dockerman luci-i18n-dockerman-zh-cn luci-app-filebrowser-go hysteria"
 
 CONFIG_ATH11K_MEM_PROFILE_512M=y
 CONFIG_NSS_FIRMWARE_VERSION_12_5=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-openlist2=y
-CONFIG_PACKAGE_luci-app-gecoosac=m
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-app-dockerman=m
