--- a/.github/workflows/K2P-ImmortalWrt.yml
+++ b/.github/workflows/K2P-ImmortalWrt.yml
@@ -108,6 +108,9 @@ jobs:
       run: |
         cp -f $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
+        # 修改配置文件
+        sed -i "/uci.set('dhcp', section_id, 'leasetime', '12h');/a\    uci.set('dhcp', section_id, 'dhcpv4', 'server');" \
+               feeds/luci/modules/luci-mod-network/htdocs/luci-static/resources/view/network/interfaces.js
         make defconfig
         make download -j$(nproc)
 
