--- a/configs/General.config
+++ b/configs/General.config
@@ -26,6 +26,12 @@ CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 
+CONFIG_PACKAGE_zram-swap=y
+CONFIG_PACKAGE_kmod-lib-lz4=y
+CONFIG_KERNEL_ZRAM_BACKEND_LZ4=y
+CONFIG_KERNEL_ZRAM_BACKEND_LZO=y
+CONFIG_KERNEL_ZRAM_DEF_COMP_LZ4=y
+
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_dmesg=y
 CONFIG_PACKAGE_htop=y
