--- a/.github/workflows/Arthur&Athena&Taiyi-ImmortalWrt.yml
+++ b/.github/workflows/Arthur&Athena&Taiyi-ImmortalWrt.yml
@@ -7,7 +7,7 @@ on:
   #   - cron: 0 20 * * *
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
+  REPO_URL: https://github.com/laipeng668/openwrt-6.x.git
   REPO_BRANCH: master
   CONFIG_FILE: configs/Arthur&Athena&Taiyi.config
   GENERAL_CONFIG_FILE: configs/General.config
