--- a/.github/workflows/Arthur&Athena&Taiyi-ImmortalWrt.yml
+++ b/.github/workflows/Arthur&Athena&Taiyi-ImmortalWrt.yml
@@ -7,8 +7,8 @@ on:
   #   - cron: 0 20 * * *
 
 env:
-  REPO_URL: https://github.com/laipeng668/openwrt-6.x.git
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/laipeng668/immortalwrt.git
+  REPO_BRANCH: openwrt-25.12
   CONFIG_FILE: configs/Arthur&Athena&Taiyi.config
   GENERAL_CONFIG_FILE: configs/General.config
   DIY_SCRIPT: scripts/Roc-script.sh
