--- a/.github/workflows/x86-64-ImmortalWrt.yml
+++ b/.github/workflows/x86-64-ImmortalWrt.yml
@@ -146,6 +146,7 @@ jobs:
         cd $OPENWRT_PATH/bin/targets/*/*
         cp $OPENWRT_PATH/.config x86.64.config
         mv config.buildinfo x86.64.config.buildinfo
+        mv immortalwrt-x86-64-generic.manifest x86.64.manifest
         mv -f $OPENWRT_PATH/bin/packages/*/*/*.apk packages
         tar -zcf x86.64.Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo sha256sums profiles.json
